refactor: split core module and stabilize settings/model handling
  - Extracted core logic into :core (prompt/config/parse/dto) for testability
  - Updated core to remove IntelliJ deps and commons/guava usage
  - Fixed settings UI lifecycle NPEs and improved inline status handling
  - Simplified model loading UX (single Load/Refresh button, inline status)
  - Cached model list from first run, persist to settings, and auto-select first model
  - Clear model cache when API key changes or on manual refresh
  - Improved invalid-model error detection and Gemini model parsing robustness